# autocalver

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements-docs.txt  requirements-lint.txt  requirements-mypy.txt  requirements-tests.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pr-main.yml  release.yml
docs/: conf.py  index.rst
example/: README.rst  pyproject.toml  setup.cfg
src/autocalver/: integration.py
tests/: test_integration.py
