[metadata]
name = autocalver

[options]
install_requires =
    tomli>=1.0.0
    python-dateutil
package_dir =
    =src
packages=
    autocalver
zip_safe = true


[options.packages.find]
where = src

[options.entry_points]
setuptools.finalize_distribution_options =
    setuptools_scm = autocalver.integration:guess_version

[options.extras_require]
test =
  coverage
  pytest
lint =
  black
  mypy
  flake8
  pylint
