[metadata]
name = autocalver

[options]
install_requires =
    tomli>=1.0.0
    python-dateutil
package_dir =
    =src
packages=
    autocalver
zip_safe = true


[options.packages.find]
where = src

[options.entry_points]
setuptools.finalize_distribution_options =
    autocalver = autocalver.integration:guess_version
setuptools.file_finders =
    autocalver = autocalver.integration:find_files
    
[options.extras_require]
test =
  coverage
  pytest
lint =
  black
  mypy
  flake8
  pylint
