[build-system]
requires = ["setuptools>=45", "wheel", "autocalver"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-project"
dynamic = ["version"]

[tool.autocalver]
use = true
log = "git-log-head"
log_command = "git log -n 1 --date=iso"
is_main_var = "GITHUB_REF"
is_main_match = ".*/main$"
